--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
               <img src="images/logo-google.png" alt="Image" class="img-fluid">
             </div>
             <div class="logo-v1 gsap-reveal">
-              <img src="images/logo-rs.png" alt="Image" class="img-fluid">
+              <img src="images/logo-logo-rsoprtz.png" alt="Image" class="img-fluid">
             </div>
             <div class="logo-v1 gsap-reveal">
               <img src="images/logo-puma.png" alt="Image" class="img-fluid">
