Responsive text fix

--- a/index.html
+++ b/index.html
@@ -170,11 +170,12 @@
           <div class="row align-items-center">
               
           <div class="col-md-7 mx-auto text-center" style="max-width:1200px;">
-  <h1 class="heading gsap-reveal-hero" style="font-size: 72px;">Abdelmouiz</h1>
-  <h2 class="subheading gsap-reveal-hero" style="font-size:28px; line-height: 1.8em;">
+  <h1 class="heading gsap-reveal-hero main-title">Abdelmouiz</h1>
+  <h2 class="subheading gsap-reveal-hero main-subtitle">
     a sports event organizer in Algeria. I specialize in graphic design, video editing, and digital content management, with experience handling national and international competitions. I also provide social media management services to enhance event visibility and audience engagement.
   </h2>
 </div>
+
 
 
           </div>
