Update About Me section with Master 2 in Applied Biochemistry

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="col-md-7 mx-auto text-center" style="max-width:1200px;">
   <h1 class="heading gsap-reveal-hero main-title">Abdelmouiz</h1>
   <h2 class="subheading gsap-reveal-hero main-subtitle">
-    a sports event organizer in Algeria. I specialize in graphic design, video editing, and digital content management, with experience handling national and international competitions.
+    a sports event organizer in Algeria. I specialize in graphic design, video editing, and digital content management, with experience handling national and international competitions. I also provide social media management services to enhance event visibility and audience engagement.
   </h2>
 </div>
           </div>
@@ -209,8 +209,9 @@
             </div>
             <div class="col-lg-4 pr-lg-5">
               <h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
-              <p class="lead gsap-reveal">I’m Abdelmouiz HEDDIA, 25 years Old a <a href="#a8fd02" style="color:#a8fd02;">multidisciplinary creative</a>
- based in Algeria With a strong background in graphic design, video editing, and sports event management, I  <a href="#a8fd02" style="color:#a8fd02;">bring together visual</a> storytelling and organizational precision.
+              <p class="lead gsap-reveal">I’m Abdelmouiz HEDDIA, 25 years Old based in Algeria, I hold a <strong>Master 2 in Applied Biochemistry</strong>, which shaped my analytical mindset and problem-solving skills. 
+  Building on this academic foundation, a <a href="#a8fd02" style="color:#a8fd02;">multidisciplinary creative</a>
+  With a strong background in graphic design, video editing, and sports event management, I  <a href="#a8fd02" style="color:#a8fd02;">bring together visual</a> storytelling and organizational precision.
 
 <a href="#a8fd02" style="color:#a8fd02;">sports event</a> manager. </p>
               <p class="mb-4 gsap-reveal">I’ve worked with organizations like Sportdata,swisstiming,rs event technology contributed to national and international sports events, and provided creative support in media production and content coordination.
