--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
           <div class="col-md-7 mx-auto text-center" style="max-width:1200px;">
   <h1 class="heading gsap-reveal-hero main-title">Abdelmouiz</h1>
   <h2 class="subheading gsap-reveal-hero main-subtitle">
-    a sports event organizer in Algeria. I specialize in graphic design, video editing, and digital content management, with experience handling national and international competitions. I also provide social media management services to enhance event visibility and audience engagement.
+    I hold a Master 2 in Applied Biochemistry and work as a sports event organizer in Algeria. 
+I specialize in graphic design, video editing, and digital content management, with experience handling national and international competitions. 
+I also provide social media management services to enhance event visibility and audience engagement.
+
   </h2>
 </div>
           </div>
