--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="container">
           <div class="row align-items-center">
               
-          <div class="col-md-7 mx-auto text-center" style="max-width:800px;">
+          <div class="col-md-7 mx-auto text-center">
   <h1 class="heading gsap-reveal-hero main-title">Abdelmouiz</h1>
   <h2 class="subheading gsap-reveal-hero main-subtitle">
     I hold a Master 2 in Applied Biochemistry and work as a sports event organizer in Algeria. 
