add visitor counter

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="col-md-7 mx-auto text-center">
   <h1 class="heading gsap-reveal-hero main-title">Abdelmouiz</h1>
   <h2 class="subheading gsap-reveal-hero main-subtitle">
-    Master 2 in Applied Biochemistry <a href="#a8fd02" style="color:#a8fd02;">|</a> Sports Event Organizer in Algeria a href="#a8fd02" style="color:#a8fd02;">|</a> Specialist in Graphic Design, Video Editing & Digital Content a href="#a8fd02" style="color:#a8fd02;">|</a> Experienced in National & International Competitions a href="#a8fd02" style="color:#a8fd02;">|</a> Social Media Management for Event Visibility & Engagement
+    Master 2 in Applied Biochemistry <a href="#a8fd02" style="color:#a8fd02;"> | </a> Sports Event Organizer in Algeria <a href="#a8fd02" style="color:#a8fd02;"> | </a> Specialist in Graphic Design, Video Editing & Digital Content <a href="#a8fd02" style="color:#a8fd02;"> | </a> Experienced in National & International Competitions <a href="#a8fd02" style="color:#a8fd02;"> | </a> Social Media Management for Event Visibility & Engagement
   </h2>
 </div>
           </div>
